# offprem

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  docker-compose.yaml  setup.cfg  tox.ini
contrib/: bug_report_template.md
docs/: Advanced.md  Tutorial.md  draft.md
offprem/: offprem.py
tests/: conftest.py  test_aws_tdd.py  test_exceptions.py  test_session_configuration.py  test_tags.py  test_vpc_configuration.py  tests_aws_premise.py
