[metadata]
name = offprem
version = 0.0.2b0

description = A tool to interact with VPCs configured in AWS accounts and roles.
long_description = file: README.md
long_description_content_type = text/markdown

author = Steven Cassamajor
author_email = contributor@networkaxis.org
url = https://github.com/Fauxsys/offprem
classifiers =
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: System Administrators
    Topic :: System :: Distributed Computing
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9

install_requires =
    boto3
    parserconfig

packages = find:

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
test =
    pytest
    pytest-cov
    tox